# Sales-Intelligence-Challenge

./: .gitignore  MANUAL_SETUP.md  README.md  SETUP.md  SkyGeni – Sales Intelligence Challenge.docx  pyproject.toml
docs/: reflection.md  system_architecture.md
outputs/: insights_report.md  risk_scores.csv  risk_scoring_report.md
src/: eda_analysis.py  risk_scoring_engine.py  utils.py
